public class Figure {
    public boolean rightFigure() {
        System.out.println("The figure is figure");
        return true;
    }

    public void area() {
        System.out.println("The figure has no area");
    }

    public void perimeter() {
        System.out.println("The figure has no perimeter");
    }
}
